Extracted a different set of images from the training videos, by skipping a different number of seconds at video start. Tested the model on this diff training data, got accuracy 0.898.

--- a/.gitignore
+++ b/.gitignore
@@ -139,9 +139,10 @@ cython_debug/
 
 
 ### Custom ignores
-raw-data
-processed-data
-unseen-raw-data
-unseen-processed-data
+training-videos/
+training-images/
+diff-training-images/
+final-test-videos/
+final-test-images/
 *.npy
 
