predict.py resizes given image to 400x225.

--- a/.gitignore
+++ b/.gitignore
@@ -139,10 +139,5 @@ cython_debug/
 
 
 ### Custom ignores
-training-videos/
-training-images/
-diff-training-images/
-final-test-videos/
-final-test-images/
-*.npy
+data/
 
